--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
             <tbody>
             </tbody>
         </table>
-        <div><button>New Book</button></div>
+        <form>
+            <div>
+                <label for='title'>Enter a book title</label>
+                <input type='text' id='title' name='bookTitle' required>
+            </div>
+            <div>
+                <label for='author'>Enter the author's name</label>
+                <input type='text' id='author' name='bookAuthor' required>
+            </div>
+            <div>
+                <label for='pages'>How many pages does the book have?</label>
+                <input type='number' id='pages' name='bookPages' value='1' min='1' max='1000000' required>
+            </div>
+            <div>
+                <label for='readonce'>Have you read this book before?</label>
+                <input type='radio' id='readonce1' required name='bookRead' value='Yes'><label for='readonce1'>Yes</label>
+                <input type='radio' id='readonce2' required name='bookRead' value='No'><label for='readonce2'>No</label>
+            </div>
+            <button>Submit</button>
+        </form>
         <script src='scripts/main.js'></script>
     </body>
 </html>
